src/Components/ProjectPopUp/ProjectPopUp.scss
@use "../../Assets/_variables.scss" as *;

.projectPopUp {
  background-color: rgba(black, 1);
  height: 100vh;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 900;
  background-color: red;
  position: fixed;
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  border: solid $border-height black;


  &__imageHolder {
    height: 45vh;
    width: 100%;
    overflow: hidden;
    border-top: solid $border-height black;

    &-image {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }

  &__details {
    width: 100%;
    height: 55vh;
    flex-direction: column;
    justify-content: space-around;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 20px;

    &-blackcross {
      position: absolute;
      top: 10px;
      right: 10px;
      height: 20px;
      width: 20px;
      z-index: 10;
      background: black;
      color: white;
      border-radius: 50%;
      font-family: $headingFont;
    }

    &-desc {
      grid-area: 1/1/2/3;

      h1 {
        margin-bottom: 20px;
        font-family: $headingFont;
        font-size: 1.5rem;
      }

      p {
        font-family: $bodyFont;
        text-align: justify;
      }
    }

    &-links {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: space-around;
      padding: 0 20px;
      grid-area: 2/2/3/3;
      text-align: center;
      gap: 10px;
      margin: auto 0;

      a {
        text-decoration: none;
        color: $black;
        background-color: $red;
        border: solid 3px $black;
        font-weight: 800;
        font-family: $headingFont;
        padding: 10px;
        width: 120px;
      }

      a:hover {
        color: white;
      }
    }

    &-stack {
      grid-area: 2/1/3/2;
      margin: auto 0;
      // grid-template-columns: repeat(auto-fit, minmax(69px, 70px));

      h2 {
        font-size: 1.2em;
        width: 100%;
      }

      &-items {
        display: flex;
        flex-wrap: wrap;
        gap:5px;
        padding: 5px 0;
        
      }
    }

    h2 {
      font-family: $headingFont;
    }

    li,
    p {
      font-family: $bodyFont;
    }
  }
}

@media screen and (min-width: $pop-up-breakpoint) {
  .projectPopUp {
    position: fixed;
    height: 90vh;
    width: 400px;
    z-index: 11;
    align-self: center;
    justify-self: center;
    position: auto;
    margin: auto;

    &__imageHolder {
      height: 45vh;
      width: 100%;
      overflow: hidden;
      border-top: solid $border-height black;

      &-image {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    &__details {
      &-desc {
        grid-area: 1/1/2/3;

        h1 {
          margin-bottom: 20px;
          font-family: $headingFont;
          font-size: 1.5rem;
        }

        p {
          font-family: $bodyFont;
          text-align: justify;
        }
      }

      &-links {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
        padding: 0 20px;
        grid-area: 2/2/3/3;
        text-align: center;
        gap: 10px;
        margin: auto 0;
      }
    }
  }
}

@media screen and (min-width: $desktop-breakpoint) {
  .projectPopUp {
    position: absolute;
    z-index: 20;
    align-self: center;
    justify-self: center;
    background-color: $white;
    border: solid 12px $black;
    height: 90%;
    width: 90%;
    display: flex;
    flex-direction:row;
    border: solid black $border-height;

    &__imageHolder {
      width: 50%;
      height: 100%;
      overflow: hidden;
      border-right: solid $border-height black;
      border-top: none;

      &-image {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    &__details {
      width: 50%;
      height: 100%;
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      padding: 15px;

      &-blackcross {
        position: absolute;
        top: 20px;
        right: 20px;
        height: 30px;
        width: 30px;
        z-index: 1;
      }

      &-desc {
        h1 {
          margin-bottom: 10px;
          font-family: $headingFont;
          font-size: 1.5em;
        }

        p {
          font-family: $bodyFont;
          text-align: justify;
          font-size: 0.9em;
          margin-top: 20px;
        }
      }

      &-links {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-around;
        padding: 0 20px;

        a {
          text-decoration: none;
          color: $black;
          background-color: $red;
          border: solid 3px $black;
          padding: 5px 15px;
          font-weight: 800;
        }

        a:hover {
          color: white;
        }
      }

      &-stack {
        display:flex;
        flex-direction:column;
        justify-content: space-between;
        align-content: center;
        width: 100%;

        h2 {
          font-size: 1.2em;
          text-align: center;
          width: 100%;
          margin-bottom: 10px;
        }

        &-items {
          list-style: none;
          display: flex;
          flex-wrap: wrap;
          gap:5px;
         align-items: center;

          img{align-self: center;}
        

      

        }
      }

      h2 {
        font-family: $headingFont;
      }

      li,
      p {
        font-family: $bodyFont;
      }
    }
  }
}

